Polish Tahap 1: full index.html with hero tagline, visi & misi, independensi, and SK-based tariff

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body { font-family: 'Inter', sans-serif; }
     </h3>
 
     <p class="text-gray-700 font-medium">
-      Berdasarkan SK Gubernur Kalimantan Selatan Tahun 2025
+      Berdasarkan SK Gubernur Kalimantan Selatan <b>Nomor 188.44/XXX/KUM/2026</b>
     </p>
 
     <p class="text-sm text-gray-500 mb-6">
@@ -162,6 +162,8 @@ body { font-family: 'Inter', sans-serif; }
 
     <p class="text-xs text-gray-500 mt-6">
       Perhitungan mengikuti metodologi tarif dalam regulasi yang berlaku di Provinsi Kalimantan Selatan.
+      <br>
+      <b>Catatan:</b> Hasil perhitungan adalah <u>tarif bersih yang diterima driver</u>, belum termasuk biaya tambahan atau potongan lain.
     </p>
 
   </div>
@@ -212,3 +214,4 @@ function hitungTarif() {
 
 </body>
 </html>
+
