Polish Tahap 1: full index.html with hero tagline, visi & misi, independensi, and SK-based tariff

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body { font-family: 'Inter', sans-serif; }
     </h3>
 
     <p class="text-gray-700 font-medium">
-      Berdasarkan SK Gubernur Kalimantan Selatan <b>Nomor 188.44/XXX/KUM/2026</b>
+      Berdasarkan SK Gubernur Kalimantan Selatan <b>Nomor 100.3.3.1/0991/KUM/2025</b>
     </p>
 
     <p class="text-sm text-gray-500 mb-6">
@@ -214,4 +214,5 @@ function hitungTarif() {
 
 </body>
 </html>
+
 
