Polish Tahap 2: premium layout + social media integration + SK-based tariff note

--- a/index.html
+++ b/index.html
@@ -12,65 +12,68 @@ body { font-family: 'Inter', sans-serif; }
 </style>
 </head>
 
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-gradient-to-b from-gray-50 to-gray-100 text-gray-800">
 
 <!-- HEADER -->
 <header class="bg-black fixed w-full z-50 shadow-lg">
   <div class="max-w-7xl mx-auto px-6 py-6 flex flex-col items-center">
-
     <img src="logo-dokb.png" class="h-24 w-24 object-contain mb-3">
-
-    <h1 class="text-white text-lg font-semibold text-center">DOKB</h1>
+    <h1 class="text-white text-lg font-semibold text-center tracking-wide">DOKB</h1>
     <p class="text-gray-400 text-xs text-center">
       Perkumpulan Driver Online Kalimantan Selatan Bersatu
     </p>
-
   </div>
 </header>
 
 <div class="h-48"></div>
 
 <!-- HERO -->
-<section class="bg-gradient-to-b from-gray-900 to-gray-800 text-white py-28 text-center">
-  <h2 class="text-4xl md:text-5xl font-bold leading-tight">
-    Organisasi Resmi Driver Online  
-    <span class="text-red-500">Kalimantan Selatan</span>
-  </h2>
-  <p class="text-red-500 font-semibold mt-4 text-lg">
-    Mengawal Regulasi • Melindungi Driver • Menjaga Keadilan Tarif
-  </p>
-  <p class="mt-6 text-gray-300 max-w-2xl mx-auto">
-    Berbadan hukum, independen, dan memperjuangkan regulasi yang adil
-    bagi driver online roda empat di Provinsi Kalimantan Selatan.
-  </p>
+<section class="bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white py-32 text-center">
+  <div class="max-w-4xl mx-auto px-6">
+    <h2 class="text-4xl md:text-6xl font-bold tracking-tight leading-tight">
+      Representasi Resmi Driver Online  
+      <span class="text-red-500">Kalimantan Selatan</span>
+    </h2>
+
+    <p class="text-red-400 font-medium mt-6 text-lg tracking-wide">
+      Mengawal Regulasi • Melindungi Driver • Menjaga Keadilan Tarif
+    </p>
+
+    <p class="mt-8 text-gray-300 text-lg leading-relaxed">
+      Organisasi berbadan hukum, independen, dan berkomitmen
+      memperjuangkan kepastian regulasi Angkutan Sewa Khusus (ASK)
+      di Provinsi Kalimantan Selatan.
+    </p>
+  </div>
 </section>
 
 <!-- TENTANG -->
-<section class="py-20 max-w-5xl mx-auto px-6 text-center">
-  <h3 class="text-3xl font-semibold mb-6">Tentang DOKB</h3>
-  <p class="text-gray-700 leading-relaxed">
-    DOKB adalah organisasi resmi yang telah mendapatkan pengesahan 
-    Kementerian Hukum Republik Indonesia serta memiliki Nomor Induk Berusaha (NIB). 
-    Berkedudukan di Kota Banjarmasin dan mewakili driver online roda empat 
-    di wilayah Kalimantan Selatan.
+<section class="py-24 max-w-5xl mx-auto px-6 text-center">
+  <h3 class="text-3xl font-bold mb-6 tracking-tight">Tentang DOKB</h3>
+  <p class="text-gray-700 leading-relaxed text-lg">
+    DOKB adalah organisasi resmi berbadan hukum yang telah mendapatkan
+    pengesahan Kementerian Hukum Republik Indonesia dan memiliki Nomor Induk
+    Berusaha (NIB). Berkedudukan di Kota Banjarmasin dan mewakili driver online
+    roda empat di wilayah Kalimantan Selatan.
   </p>
 </section>
 
 <!-- LEGALITAS -->
-<section class="bg-gray-900 text-white py-20">
+<section class="bg-gray-900 text-white py-24">
   <div class="max-w-5xl mx-auto px-6 text-center">
-    <h3 class="text-3xl font-semibold mb-10">Legalitas Resmi</h3>
-    <div class="grid md:grid-cols-2 gap-8 text-left">
+    <h3 class="text-3xl font-bold mb-12 tracking-tight">Legalitas Resmi</h3>
 
-      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h4 class="text-lg font-semibold mb-2">SK Kemenkumham</h4>
+    <div class="grid md:grid-cols-2 gap-10 text-left">
+
+      <div class="bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-700 hover:shadow-2xl transition">
+        <h4 class="text-lg font-semibold mb-3">SK Kemenkumham</h4>
         <p>Nomor: AHU-0007418.AH.01.07.TAHUN 2025</p>
         <p>Tanggal: 17 September 2025</p>
         <p>Berkedudukan: Kota Banjarmasin</p>
       </div>
 
-      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h4 class="text-lg font-semibold mb-2">Nomor Induk Berusaha (NIB)</h4>
+      <div class="bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-700 hover:shadow-2xl transition">
+        <h4 class="text-lg font-semibold mb-3">Nomor Induk Berusaha (NIB)</h4>
         <p>Nomor: 1212250010775</p>
         <p>KBLI: 49426 – Angkutan Sewa Khusus</p>
         <p>Terbit: 12 Desember 2025</p>
@@ -80,101 +83,79 @@ body { font-family: 'Inter', sans-serif; }
   </div>
 </section>
 
-<!-- KEANGGOTAAN -->
-<section class="py-20 bg-white text-center px-6">
-  <h3 class="text-3xl font-semibold mb-8">Keanggotaan</h3>
-
-  <ul class="text-gray-700 space-y-2 mb-8">
-    <li>Driver online roda empat aktif</li>
-    <li>KTP, SIM & STNK berlaku</li>
-    <li>Mematuhi AD/ART organisasi</li>
-    <li>Bukan perwakilan aplikator</li>
-  </ul>
-
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6nWc5cFUzKbhhJjyGg-gfvyQxReknKdXtitp-rqqS3WD99g/viewform"
-     target="_blank"
-     class="bg-red-600 text-white px-8 py-3 rounded-md hover:bg-red-700 transition shadow-md">
-     Daftar Anggota DOKB
-  </a>
-</section>
-
-<!-- Visi & Misi -->
-<section class="py-20 max-w-4xl mx-auto px-6 text-center">
-  <h3 class="text-3xl font-semibold mb-6">Visi & Misi</h3>
-
-  <h4 class="text-xl font-medium mb-2">Visi</h4>
-  <p class="text-gray-700 leading-relaxed mb-6">
-    Menjadi organisasi profesional driver online roda empat yang kuat secara hukum,
-    solid secara internal, dan berperan aktif dalam pengawalan regulasi di Kalimantan Selatan.
-  </p>
-
-  <h4 class="text-xl font-medium mb-2">Misi</h4>
-  <ul class="text-gray-700 list-disc list-inside space-y-2">
-    <li>Mengawal implementasi regulasi Angkutan Sewa Khusus (ASK)</li>
-    <li>Melindungi kepentingan driver secara kolektif</li>
-    <li>Membangun sistem organisasi profesional</li>
-    <li>Menjaga independensi dari pengaruh aplikator</li>
-  </ul>
-</section>
-
-<!-- Komitmen Independensi -->
-<section class="py-16 bg-gray-100 text-center px-6 max-w-4xl mx-auto">
-  <h3 class="text-3xl font-semibold mb-4">Komitmen Independensi</h3>
-  <p class="text-gray-700 leading-relaxed">
-    DOKB bersifat independen dan tidak berada di bawah pengaruh atau kendali
-    aplikator manapun. Setiap kebijakan organisasi ditetapkan secara kolektif demi
-    kepentingan anggota.
-  </p>
-</section>
-
-<!-- PERHITUNGAN TARIF RESMI -->
-<section class="py-20 bg-gray-100">
+<!-- TARIF -->
+<section class="py-24 bg-gray-100">
   <div class="max-w-2xl mx-auto px-6 text-center">
 
-    <h3 class="text-3xl font-semibold mb-2">
+    <h3 class="text-3xl font-bold mb-3 tracking-tight">
       Perhitungan Tarif Resmi
     </h3>
 
     <p class="text-gray-700 font-medium">
-      Berdasarkan SK Gubernur Kalimantan Selatan <b>Nomor 100.3.3.1/0991/KUM/2025</b>
+      Berdasarkan SK Gubernur Kalimantan Selatan
+      <b>Nomor 100.3.3.1/0991/KUM/2025</b>
     </p>
 
-    <p class="text-sm text-gray-500 mb-6">
+    <p class="text-sm text-gray-500 mb-8">
       Tentang Penetapan Tarif Angkutan Sewa Khusus (ASK)
     </p>
 
-    <div class="bg-white p-4 rounded shadow text-sm text-gray-600 mb-8">
+    <div class="bg-white p-6 rounded-xl shadow-md text-sm text-gray-600 mb-10">
       <p>• 3 KM pertama (maksimal): <b>Rp 16.000</b></p>
       <p>• Tarif Batas Bawah (TBB): <b>Rp 4.000 / KM</b></p>
       <p>• Tarif Batas Atas (TBA): <b>Rp 6.500 / KM</b></p>
     </div>
 
     <input type="number" id="jarak"
-      class="w-full p-3 border rounded-md mb-4"
+      class="w-full p-4 border rounded-lg mb-5 text-center"
       placeholder="Masukkan jarak perjalanan (KM)">
 
     <button onclick="hitungTarif()"
-      class="bg-black text-white px-6 py-3 rounded-md hover:bg-gray-800 transition">
+      class="bg-black text-white px-10 py-4 rounded-lg hover:bg-gray-800 transition shadow-lg tracking-wide">
       Hitung Berdasarkan SK
     </button>
 
-    <div id="hasil" class="mt-8 text-lg"></div>
+    <div id="hasil" class="mt-10 text-lg"></div>
 
-    <p class="text-xs text-gray-500 mt-6">
+    <p class="text-xs text-gray-500 mt-8">
       Perhitungan mengikuti metodologi tarif dalam regulasi yang berlaku di Provinsi Kalimantan Selatan.
       <br>
-      <b>Catatan:</b> Hasil perhitungan adalah <u>tarif bersih yang diterima driver</u>, belum termasuk biaya tambahan atau potongan lain.
+      <b>Catatan:</b> Hasil perhitungan merupakan <u>tarif bersih yang diterima driver</u>.
     </p>
 
   </div>
 </section>
 
+<!-- MEDIA RESMI -->
+<section class="py-24 bg-white text-center px-6">
+  <h3 class="text-3xl font-bold mb-6 tracking-tight">Media Resmi DOKB</h3>
+
+  <p class="text-gray-600 mb-12 text-lg">
+    Ikuti informasi, edukasi regulasi, dan dokumentasi kegiatan resmi DOKB melalui kanal berikut:
+  </p>
+
+  <div class="flex flex-col md:flex-row justify-center gap-8">
+
+    <a href="https://instagram.com/dokb_kalsel" target="_blank"
+       class="bg-gradient-to-r from-pink-500 to-red-500 text-white px-10 py-4 rounded-xl shadow-lg hover:scale-105 transition">
+       Instagram @dokb_kalsel
+    </a>
+
+    <a href="https://youtube.com/@DOKBKalsel" target="_blank"
+       class="bg-red-600 text-white px-10 py-4 rounded-xl shadow-lg hover:scale-105 transition">
+       YouTube @DOKBKalsel
+    </a>
+
+  </div>
+</section>
+
 <!-- FOOTER -->
-<footer class="bg-black text-gray-400 text-center py-6">
+<footer class="bg-black text-gray-500 text-center py-10 text-sm">
   <p>© 2025 Perkumpulan Driver Online Kalimantan Selatan Bersatu (DOKB)</p>
   <p>Alamat: Jln. AMD XII Pondok Pinang Indah No. 38, Pemurus Dalam, Banjarmasin, Kalsel</p>
   <p>Email: sekretariat@dokb.or.id | WhatsApp: +62 822 4646 3652</p>
-  <p>Independen • Non-Profit • Berbadan Hukum</p>
+  <p class="mt-3">Instagram: @dokb_kalsel | YouTube: @DOKBKalsel</p>
+  <p class="mt-2">Independen • Non-Profit • Berbadan Hukum</p>
 </footer>
 
 <script>
@@ -192,9 +173,9 @@ function hitungTarif() {
 
   if (km <= 3) {
     document.getElementById("hasil").innerHTML =
-      "<div class='bg-white p-6 rounded shadow'>" +
+      "<div class='bg-white p-6 rounded-xl shadow'>" +
       "<p class='font-medium'>Total Tarif Resmi</p>" +
-      "<p class='text-xl font-bold mt-2'>Rp " + tarifAwal.toLocaleString() + "</p>" +
+      "<p class='text-2xl font-bold mt-2'>Rp " + tarifAwal.toLocaleString() + "</p>" +
       "</div>";
     return;
   }
@@ -204,8 +185,8 @@ function hitungTarif() {
   let totalAtas = tarifAwal + (sisaKm * TBA);
 
   document.getElementById("hasil").innerHTML =
-    "<div class='bg-white p-6 rounded shadow text-left'>" +
-    "<p class='font-medium mb-2'>Hasil Perhitungan Tarif Resmi:</p>" +
+    "<div class='bg-white p-6 rounded-xl shadow text-left'>" +
+    "<p class='font-medium mb-3'>Hasil Perhitungan Tarif Resmi:</p>" +
     "<p>Tarif Batas Bawah: <b>Rp " + totalBawah.toLocaleString() + "</b></p>" +
     "<p>Tarif Batas Atas: <b>Rp " + totalAtas.toLocaleString() + "</b></p>" +
     "</div>";
@@ -213,6 +194,4 @@ function hitungTarif() {
 </script>
 
 </body>
-</html>
-
-
+  </html>
