UI Update: redesign social media section with official icons

--- a/index.html
+++ b/index.html
@@ -134,16 +134,42 @@ body { font-family: 'Inter', sans-serif; }
     Ikuti informasi, edukasi regulasi, dan dokumentasi kegiatan resmi DOKB melalui kanal berikut:
   </p>
 
-  <div class="flex flex-col md:flex-row justify-center gap-8">
+  <div class="flex justify-center gap-16">
 
+    <!-- Instagram -->
     <a href="https://instagram.com/dokb_kalsel" target="_blank"
-       class="bg-gradient-to-r from-pink-500 to-red-500 text-white px-10 py-4 rounded-xl shadow-lg hover:scale-105 transition">
-       Instagram @dokb_kalsel
+       class="flex flex-col items-center group">
+       
+      <div class="w-16 h-16 bg-gradient-to-tr from-pink-500 to-red-500 rounded-full flex items-center justify-center shadow-lg group-hover:scale-110 transition">
+        <svg xmlns="http://www.w3.org/2000/svg" 
+             class="w-8 h-8 text-white" 
+             fill="currentColor" 
+             viewBox="0 0 24 24">
+          <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm5 5a5 5 0 110 10 5 5 0 010-10zm6.5-.75a1.25 1.25 0 11-2.5 0 1.25 1.25 0 012.5 0z"/>
+        </svg>
+      </div>
+
+      <span class="mt-4 font-medium text-gray-700 group-hover:text-black transition">
+        @dokb_kalsel
+      </span>
     </a>
 
+    <!-- YouTube -->
     <a href="https://youtube.com/@DOKBKalsel" target="_blank"
-       class="bg-red-600 text-white px-10 py-4 rounded-xl shadow-lg hover:scale-105 transition">
-       YouTube @DOKBKalsel
+       class="flex flex-col items-center group">
+
+      <div class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center shadow-lg group-hover:scale-110 transition">
+        <svg xmlns="http://www.w3.org/2000/svg" 
+             class="w-8 h-8 text-white" 
+             fill="currentColor" 
+             viewBox="0 0 24 24">
+          <path d="M23.5 6.2s-.2-1.6-.8-2.3c-.8-.9-1.6-.9-2-.9C17.8 2.8 12 2.8 12 2.8h0s-5.8 0-8.7.2c-.4 0-1.2 0-2 .9C.7 4.6.5 6.2.5 6.2S.3 8 .3 9.8v1.4C.3 13 .5 14.8.5 14.8s.2 1.6.8 2.3c.8.9 1.8.9 2.2 1C5.2 18.3 12 18.3 12 18.3s5.8 0 8.7-.2c.4 0 1.2 0 2-.9.6-.7.8-2.3.8-2.3s.2-1.8.2-3.6V9.8c0-1.8-.2-3.6-.2-3.6zM9.8 14.5V7.5l6 3.5-6 3.5z"/>
+        </svg>
+      </div>
+
+      <span class="mt-4 font-medium text-gray-700 group-hover:text-black transition">
+        @DOKBKalsel
+      </span>
     </a>
 
   </div>
@@ -195,3 +221,4 @@ function hitungTarif() {
 
 </body>
   </html>
+
