Restore membership registration section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,33 @@ body { font-family: 'Inter', sans-serif; }
   </div>
 </section>
 
+<!-- KEANGGOTAAN -->
+<section class="py-24 bg-white text-center px-6">
+  <h3 class="text-3xl font-bold mb-6 tracking-tight">
+    Keanggotaan DOKB
+  </h3>
+
+  <p class="text-gray-700 mb-8 max-w-2xl mx-auto">
+    Keanggotaan terbuka bagi driver online roda empat aktif
+    yang beroperasi di wilayah Kalimantan Selatan dan
+    bersedia mematuhi AD/ART serta ketentuan organisasi.
+  </p>
+
+  <ul class="text-gray-600 mb-10 space-y-2">
+    <li>✔ Driver online roda empat aktif</li>
+    <li>✔ KTP, SIM & STNK berlaku</li>
+    <li>✔ Mematuhi AD/ART organisasi</li>
+    <li>✔ Bukan perwakilan aplikator</li>
+  </ul>
+
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6nWc5cFUzKbhhJjyGg-gfvyQxReknKdXtitp-rqqS3WD99g/viewform"
+     target="_blank"
+     class="bg-black text-white px-10 py-4 rounded-lg hover:bg-gray-800 transition shadow-lg tracking-wide">
+     Daftar Menjadi Anggota
+  </a>
+
+</section>
+  
 <!-- TARIF -->
 <section class="py-24 bg-gray-100">
   <div class="max-w-2xl mx-auto px-6 text-center">
@@ -221,4 +248,5 @@ function hitungTarif() {
 
 </body>
   </html>
+
 
